Добавил оставшиеся тесты, исправил ошибку инициализации тестовой БД.